--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -73,8 +73,9 @@
 }
 /*** Headlines ***/
 .secondary-title{
-  margin-top: 5px;
-  margin-bottom: 10px;
+  position: relative;
+  margin-top: 25px;
+  margin-bottom: 30px;
   text-align: center;
   font-size: var(--big-size);
   font-weight: var(--weight-bold);
